[package]
name = "html-client-with-reqwest"
version = "0.1.0"
authors = ["yanitajantaboot"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["cookies","json"]}
tokio = { version = "0.2", features = ["full"] }